[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/DKO-api-X1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/spaceship_flame.png" type="Texture" id=3]
[ext_resource path="res://Sprites/explosion_big.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.90868
height = 6.55101

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.71434
height = 11.9528

[sub_resource type="Animation" id=3]
resource_name = "Dying"
tracks/0/type = "value"
tracks/0/path = NodePath("Player_Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.125, 0.125 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spaceship_flame:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.125, 0.125 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("explosion_big:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.125, 0.125 ), Vector2( 0.125, 0.125 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("explosion_big:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("spaceship_flame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion_big:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("spaceship_flame:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spaceship_flame:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 12.5 ), Vector2( 0, 12.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("explosion_big:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.66893
height = 8.07783

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.125
height = 13.5536

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="spaceship_flame" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
hframes = 7

[node name="Player_Sprite" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="explosion_big" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )
hframes = 9

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 4.38, 4.097 )
rotation = -0.959931
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -4.37995, 4.10165 )
rotation = 0.959931
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.646 )
shape = SubResource( 2 )

[node name="Fuel_Timer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dying = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Moving = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -15.497 )

[node name="Gun_Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4.38, 4.102 )
rotation = -0.959931
shape = SubResource( 6 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.38, 4.102 )
rotation = 0.959931
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.180824 )
shape = SubResource( 7 )

[connection signal="timeout" from="Fuel_Timer" to="." method="_on_Fuel_Timer_timeout"]
[connection signal="timeout" from="Gun_Timer" to="." method="_on_Gun_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
